--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "identity-obj-proxy": "^3.0.0"
+  }
 }
